--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.4.4
 asn1crypto==0.24.0
+astroid==2.1.0
 async-timeout==3.0.1
 attrs==18.2.0
 certifi==2018.10.15
@@ -8,17 +9,24 @@ chardet==3.0.4
 cryptography==2.3.1
 idna==2.7
 idna-ssl==1.1.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 multidict==4.4.2
 numpy==1.15.2
 ordered-set==3.0.2
 Pillow==5.3.0
 pycparser==2.19
+pylint==2.2.2
 PyMySQL==0.9.2
-PyYAML==3.13
+PyYAML==4.2b1
 requests==2.19.1
 ruamel.appconfig==0.5.4
 ruamel.std.argparse==0.8.1
 selenium==3.14.1
 six==1.11.0
+timeout-decorator==0.4.0
+typed-ast==1.3.1
 urllib3==1.23
+wrapt==1.11.1
 yarl==1.2.6
