--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,15 @@ asn1crypto==0.24.0
 astroid==2.1.0
 async-timeout==3.0.1
 attrs==18.2.0
+bandit==1.6.1
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 cryptography==2.3.1
+entrypoints==0.3
+flake8==3.7.7
+gitdb2==2.0.5
+GitPython==2.1.11
 idna==2.7
 idna-ssl==1.1.0
 isort==4.3.4
@@ -15,8 +20,11 @@ mccabe==0.6.1
 multidict==4.4.2
 numpy==1.15.2
 ordered-set==3.0.2
+pbr==5.3.0
 Pillow==5.3.0
+pycodestyle==2.5.0
 pycparser==2.19
+pyflakes==2.1.1
 pylint==2.2.2
 PyMySQL==0.9.2
 PyYAML==4.2b1
@@ -25,8 +33,11 @@ ruamel.appconfig==0.5.4
 ruamel.std.argparse==0.8.1
 selenium==3.14.1
 six==1.11.0
+smmap2==2.0.5
+stevedore==1.30.1
 timeout-decorator==0.4.0
 typed-ast==1.3.1
 urllib3==1.23
 wrapt==1.11.1
+yapf==0.27.0
 yarl==1.2.6
