--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ mccabe==0.6.1
 multidict==4.4.2
 numpy==1.15.2
 ordered-set==3.0.2
+ordered-set-stubs==0.1.3
 pbr==5.3.0
+pep8==1.7.1
 Pillow==5.3.0
 pycodestyle==2.5.0
 pycparser==2.19
@@ -28,7 +30,7 @@ pyflakes==2.1.1
 pylint==2.2.2
 PyMySQL==0.9.2
 PyYAML==4.2b1
-requests==2.19.1
+requests==2.22.0
 ruamel.appconfig==0.5.4
 ruamel.std.argparse==0.8.1
 selenium==3.14.1
@@ -37,7 +39,8 @@ smmap2==2.0.5
 stevedore==1.30.1
 timeout-decorator==0.4.0
 typed-ast==1.3.1
-urllib3==1.23
+urllib3==1.25.3
+wget==3.2
 wrapt==1.11.1
 yapf==0.27.0
 yarl==1.2.6
